compile-tests/fixtures/compile-errors/not-called-as-function/input.ts
// TODO: Use babel-plugin-module-resolver instead of this relative path hell
import createValidator from "../../../../dist/typecheck.macro";
createValidator;
